PMOMax-On-GCP/deploy/manifest/pmomax-pid-architect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_INSTANCE_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_INSTANCE_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_INSTANCE_NAME}
  template:
    metadata:
      labels:
        app: ${APP_INSTANCE_NAME}
    spec:
      containers:
        - name: app
          image: ${PMOMAX_APP_IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: ${PMOMAX_APP_PORT}
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
              ephemeral-storage: 1Gi
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
