PMOMax-On-GCP/deploy/manifest/pmomax-pid-architect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_INSTANCE_NAME}-svc
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_INSTANCE_NAME}
spec:
  type: ClusterIP
  selector:
    app: ${APP_INSTANCE_NAME}
  ports:
    - name: http
      port: 80
      targetPort: ${PMOMAX_APP_PORT}
