PMOMax-On-GCP/deploy/manifest/pmomax-pid-architect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_INSTANCE_NAME}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP_INSTANCE_NAME}
                port:
                  number: 80
